<?xml version="1.0"?>

-<package format="2">
<name>camera_driver</name>
<version>0.1.0</version>
<description>camera_driver by ffmpeg</description>
<license>BSD</license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>message_generation</build_depend>
<exec_depend>message_runtime</exec_depend>
<depend>camera_info_manager</depend>
<depend>cv_bridge</depend>
<depend>dynamic_reconfigure</depend>
<depend>image_transport</depend>
<depend>roscpp</depend>
<depend>sensor_msgs</depend>
<depend>tf</depend>
<depend>visualization_msgs</depend>
</package>